<resources>
    <string-array name="entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="app_name" translatable="false">Agenda</string>
    <string name="file_path_contact_images" translatable="false">Agenda/Contact_Images</string>
    <string name="search_menu" translatable="true">Search</string>
    <string name="export_from_menu" translatable="true">Import from SD Card</string>
    <string name="export_to_menu" translatable="true">Export to SD Card</string>
    <string name="import_from_contacts" translatable="true">Import from Phone</string>
    <string name="search_contact_hint" translatable="true">Search contact…</string>
    <string name="contact_overview_label" translatable="true">Add Contact</string>
    <string name="name_contact_overview" translatable="true">Name*</string>
    <string name="number_contact_overview" translatable="true">Phone Number*</string>
    <string name="address_contact_overview" translatable="true">Home Address</string>
    <string name="email_contact_overview" translatable="false">Email</string>
    <string name="phone_contact_overview" translatable="true">Phone</string>
    <string name="title_save_contact_overview" translatable="true">Save Contact</string>
    <string name="modify_contact_title" translatable="true">Modify Contact</string>
    <string name="positive_dialog" translatable="true">Yes</string>
    <string name="negative_dialog" translatable="false">No</string>

    <string name="invalid_insertion_1" translatable="true">Contact must have a name and a number.</string>
    <string name="insertion_failed" translatable="true">The phone number is already saved.</string>
    <string name="insertion_image_error" translatable="true">Image not loaded.</string>
    <string name="deletion_failed" translatable="true">Something occurred, deletion failed.</string>
    <string name="update_failed" translatable="true">Something occurred, update failed.</string>
    <string name="update_equal" translatable="true">Changes were discarded.</string>
    <string name="empty_update" translatable="true">Empty contact discarded.</string>
    <string name="invalid_phone_call" translatable="true">Invalid phone number.</string>
    <string name="whatsapp_error" translatable="true">Install WhatsApp to perform this action.</string>
    <string name="export_to_SD" translatable="true">Something went wrong while exporting to SD Card.</string>
    <string name="success_export_to" translatable="true">Contacts were successfully exported.</string>
    <string name="import_to_SD" translatable="true">Something went wrong while importing from SD Card.</string>
    <string name="success_import_to" translatable="true">Contacts were successfully imported.</string>
    <string name="file_sd" translatable="false">contacts.cnt</string>


    <string name="favorite_contact" translatable="true">Favourite</string>
    <string name="no_dialog" translatable="false">No</string>
    <string name="yes_dialog" translatable="true">Yes</string>
    <string name="msg_dialog" translatable="true">Do you want to discard the contact?</string>
    <string name="no_cont_to_export" translatable="true">You do not have any contacts to export.</string>
    <string name="no_cont_to_import" translatable="true">No contacts were imported.</string>
    <string name="chooser_email" translatable="true">Email via…</string>

    <string name="email_field_empty" translatable="true">Email field is empty.</string>
    <string name="whastapp_pop" translatable="true">Send WhastApp</string>
    <string name="call_to" translatable="true">Call</string>
    <string name="mail_to" translatable="true">Send Mail</string>
    <string name="overflow_chars" translatable="true">The character limit has been surpassed.</string>
    <string name="error_field" translatable="true">Invalid field.</string>
    <string name="error_on_back" translatable="true">The contact information is not valid.</string>

    <string name="remove_image" translatable="true">Remove image</string>
    <string name="error_delete_img" translatable="true">Something wrong occurred while deleting the image.</string>

    <string name="see_contact_sheet" translatable="true">See Contact</string>
    <string name="favourite_sheet" translatable="true">Favourite</string>
    <string name="delete_contact_sheet" translatable="true">Delete Contact</string>
    <string name="delete_fav_sheet" translatable="true">Delete Favourite</string>

    <string name="add_date" translatable="true">Add Date</string>
    <string name="date_sheet" translatable="true">Date</string>
    <string name="date_programmed" translatable="true">Scheduled Date</string>
    <string name="schedule_day" translatable="true">Schedule a date</string>
    <string name="select_date" translatable="true">Select Date</string>
    <string name="date_format" translatable="false">dd/mm/yyyy</string>
    <string name="select_time" translatable="true">Select Time</string>
    <string name="format_time" translatable="false">hh:mm</string>
    <string name="cancel_scheduled_date" translatable="true">Cancel</string>
    <string name="finish_scheduled_date" translatable="true">Add</string>
    <string name="modify_scheduled_date" translatable="true">Modify</string>
    <string name="at_time" translatable="false">\u0040</string>
    <string name="modify_date" translatable="true">Modify Date</string>
    <string name="current_dates_menu" translatable="true">Current Dates</string>

    <string name="import_export_options" translatable="true">Import/Export</string>
    <string name="author" translatable="false">Gabriel García López</string>
    <string name="author_label" translatable="true">Developed by</string>

    <string name="frag_contact_discarded" translatable="true">Contact discarded</string>
    <string name="frag_contact_saved" translatable="true">Contact saved</string>
    <string name="menu_add_contact" translatable="true">Add Contact</string>
    <string name="birthday_lunch_meeting" translatable="true">Name of Event</string>
    <string name="dialog_err_large" translatable="true">Event too large</string>
    <string name="dialog_event_name" translatable="true">Must name the date</string>
    <string name="calendar_err" translatable="true">Could not add event to calendar</string>
    <string name="calendar_with" translatable="true">with</string>
    <string name="dialog_event_added_calendar" translatable="true">Event added to Google Calendar</string>
    <string name="dialog_set_alarm" translatable="true">Set alarm</string>
    <string name="dialog_disclaimer_minutes" translatable="true">(30 minutes prior)</string>
    <string name="import_dialog_disclaimer" translatable="true">contact(s) were not imported because of bad format. Please change the name of those contacts.</string>
    <string name="dialog_event_last_label">How much the event lasts?</string>
    <string name="dialog_hours_label">(Hours)</string>
</resources>
