<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/export_from_content_provider"
            android:title="@string/import_from_contacts"
            android:icon="@drawable/ic_import_contacts"
            app:showAsAction="never"
            android:orderInCategory="3"/>

        <item
            android:id="@+id/export_to_contacts"
            android:title="@string/export_to_menu"
            android:icon="@drawable/ic_export"
            app:showAsAction="never"
            android:orderInCategory="2"/>

        <item
            android:id="@+id/export_from_contacts"
            android:title="@string/export_from_menu"
            android:icon="@drawable/ic_import"
            app:showAsAction="never"
            android:orderInCategory="1"/>
    </group>

    <item android:title="@string/author_label">
        <menu>
            <item android:title="@string/author"/>
        </menu>
    </item>

</menu>