<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_remove_img"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:title="@string/remove_image"
        android:icon="@drawable/ic_remove_img"/>

    <item
        android:id="@+id/menu_fav"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:title="@string/favorite_contact"
        android:icon="@drawable/ic_heart"/>

    <item
        android:id="@+id/menu_save"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/title_save_contact_overview"
        android:icon="@drawable/ic_check"/>
</menu>