<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_date"
            android:textSize="22sp"
            android:textColor="@color/text"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="15dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiet_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:hint="@string/birthday_lunch_meeting"
            android:maxLines="1"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/text"
            android:layout_gravity="start"
            android:gravity="start"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_show_date"
                android:layout_marginStart="20dp"
                android:hint="@string/date_format"
                android:textSize="18sp"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/date_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:tint="@color/colorAccent"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_time"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="6dp"
            android:textColor="@color/text"
            android:layout_gravity="start"
            android:gravity="start"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_show_time"
                android:layout_marginStart="20dp"
                android:hint="@string/format_time"
                android:textSize="18sp"
                android:layout_weight="2"/>

            <ImageView
                android:id="@+id/time_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="15sp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/text"
                android:gravity="start"
                android:text="@string/dialog_set_alarm"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/separator"
                android:gravity="start"
                android:text="@string/dialog_disclaimer_minutes"/>

            <Switch
                android:id="@+id/switch_alarm_on_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:checked="true"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_square_button"
                android:text="@string/cancel_scheduled_date"
                android:textSize="15sp"
                android:id="@+id/button_cancel"
                android:visibility="gone"
                android:textColor="@color/title"
                android:layout_gravity="center"
                android:layout_marginEnd="50dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_button"
                android:background="@drawable/round_square_button"
                android:text="@string/finish_scheduled_date"
                android:textSize="15sp"
                android:textColor="@color/title"
                android:layout_gravity="center" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>