<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:paddingBottom="8dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="3dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:background="@color/separator" />

    <TextView
        android:id="@+id/title_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="Gabriel García" />

    <TextView
        android:id="@+id/has_date_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="@color/text"
        android:textSize="16sp"
        tools:text="Date: 12/12/2019 @ 13:00" />

    <Button
        android:id="@+id/button_see"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/see_contact_sheet"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textSecondary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_favourite"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/favourite_sheet"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textSecondary"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="?attr/selectableItemBackground"
        android:padding="16dp"
        android:text="@string/delete_contact_sheet"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textSecondary"
        android:textSize="16sp" />

</LinearLayout>