<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/icon_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:src="@drawable/ic_account"
        app:layout_constraintStart_toStartOf="@+id/icon_date"
        app:layout_constraintTop_toBottomOf="@+id/add_date" />

    <ImageView
        android:id="@+id/icon_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_smartphone"
        app:layout_constraintStart_toStartOf="@+id/icon_name"
        app:layout_constraintTop_toBottomOf="@+id/tiet_name_layout" />

    <ImageView
        android:id="@+id/icon_home_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_call"
        app:layout_constraintStart_toStartOf="@+id/icon_number"
        app:layout_constraintTop_toBottomOf="@+id/tiet_number_layout" />

    <ImageView
        android:id="@+id/icon_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="@+id/icon_home_phone"
        app:layout_constraintTop_toBottomOf="@+id/tiet_home_phone_layout" />

    <ImageView
        android:id="@+id/icon_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_email"
        app:layout_constraintStart_toStartOf="@+id/icon_home"
        app:layout_constraintTop_toBottomOf="@+id/tiet_home_layout" />

    <ImageView
        android:id="@+id/icon_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/savingContact"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:text="@string/schedule_day"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/icon_date"
        app:layout_constraintStart_toEndOf="@+id/icon_date"
        app:layout_constraintTop_toTopOf="@+id/icon_date" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/name_contact_overview"
        android:maxLines="1"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/icon_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_name"
        app:layout_constraintTop_toTopOf="@+id/icon_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_number_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/number_contact_overview"
        android:maxLines="1"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/icon_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon_number"
        app:layout_constraintTop_toTopOf="@+id/icon_number"
        app:layout_constraintVertical_bias="0.523">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_home_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/address_contact_overview"
        android:maxLines="1"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/icon_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_home"
        app:layout_constraintTop_toTopOf="@+id/icon_home">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_mail_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/email_contact_overview"
        android:maxLines="1"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/icon_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_mail"
        app:layout_constraintTop_toTopOf="@+id/icon_mail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiet_home_phone_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:hint="@string/phone_contact_overview"
        android:maxLines="1"
        app:counterEnabled="true"
        app:counterMaxLength="12"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="@+id/icon_home_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_home_phone"
        app:layout_constraintTop_toTopOf="@+id/icon_home_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_home_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number|phone" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>