<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- MAIN LAYOUT -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_contacts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_add"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"/>

    </FrameLayout>

    <!-- BOTTOM SHEET -->
    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:background="@drawable/bottom_sheet_style"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="3dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center"
            android:background="@color/title" />

        <TextView
            android:id="@+id/title_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/title"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            tools:text="Gabriel García" />

        <TextView
            android:id="@+id/has_date_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title"
            android:layout_gravity="center"
            tools:text="Date: 12/12/2019 @ 13:00" />

        <Button
            android:id="@+id/button_see"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="textStart"
            android:textColor="@color/title"
            android:text="@string/see_contact_sheet"/>

        <Button
            android:id="@+id/button_favourite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="textStart"
            android:textColor="@color/title"
            android:text="@string/favourite_sheet" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/selectableItemBackground"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="textStart"
            android:textColor="@color/title"
            android:text="@string/delete_contact_sheet" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>